# b3d-toys

./: README.md  mise.toml  pyproject.toml
scripts/: link_blender_extension.py
src/b3d_toys/: __init__.py  blender_manifest.toml  km.py  op.py  ui.py
src/b3d_toys/op/: __init__.py
