[project]
name = "b3d-toys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ik2m", email = "39111330+ik2m@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
b3d-toys = "b3d_toys:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff",
]
